# static/openapi/schema_openrosa.yaml
@@ -4183,10 +4183,16 @@ components:
           description: The username.
           example: wizard
           type: string
+        has_validated_password:
+          description: Whether the account is restricted because an administrator
+            invalidated its password.
+          example: true
+          type: boolean
       required:
       - display
       - has_usable_password
       - username
+      - has_validated_password
     EmailAddress:
       type: object
       properties:
@@ -4435,6 +4441,7 @@ components:
         email: email@domain.org
         has_usable_password: true
         username: wizard
+        has_validated_password: true
     AuthenticatedByPassword:
       summary: |
         Authenticated by password.
@@ -4447,6 +4454,7 @@ components:
             email: email@domain.org
             has_usable_password: true
             username: wizard
+            has_validated_password: true
           methods:
           - method: password
             at: 1711555057.065702
@@ -4467,6 +4475,7 @@ components:
             email: email@domain.org
             has_usable_password: true
             username: wizard
+            has_validated_password: true
           methods:
           - method: code
             at: 1711555057.065702
@@ -4487,6 +4496,7 @@ components:
             email: email@domain.org
             has_usable_password: true
             username: wizard
+            has_validated_password: true
           methods:
           - method: password
             at: 1711555057.065702
@@ -4704,6 +4714,7 @@ components:
             email: email@domain.org
             has_usable_password: true
             username: wizard
+            has_validated_password: true
           methods:
           - method: password
             at: 1711555057.065702
@@ -5251,6 +5262,7 @@ components:
                     email: email@domain.org
                     has_usable_password: true
                     username: wizard
+                    has_validated_password: true
                   methods:
                   - method: password
                     at: 1711555057.065702
